# castermode-py-bind

./: Makefile  README.md  add.cc  add.h  pyproject.toml  setup.cfg
castermode_py_bind/: __init__.py  pybind_add.cpp
tests/: test_basic.py
