[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "castermode-py-bind"
version = "0.1.0"
description = "castermode 的 Python 绑定"
authors = [
    { name="你的名字", email="你的邮箱" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = []
